# kofun-friends

./: .gitignore  CONTRIBUTING.md  LICENSE-ASSETS.md  README.md
.github/workflows/: ci.yml
assets/backgrounds/: README.md
assets/backgrounds/cc0/skyline-background/: SOURCE.md
assets/backgrounds/cc0/warped-city/: SOURCE.md
assets/cursors/: README.md
assets/emoji/: README.md
assets/icons/: README.md
assets/motion/: README.md
catalog/: manifest.json  manifest.schema.json
docs/: adding-assets.md  material-sites.md
scripts/: gen_backgrounds.py  gen_lineup.py  gen_motion_studies.py  gen_pixel_svgs.py  gen_sprites.py  regen.sh
tools/converter/: Cargo.toml  README.md
tools/converter/src/: cli.rs  cursor.rs  main.rs  manifest.rs  raster.rs  svg.rs  util.rs
