[package]
name = "kofun-convert"
version = "0.1.0"
edition = "2021"
description = "Native asset converter for the kofun-friends asset library (resize / format convert / SVG rasterize / GIF)"
license = "MIT"
repository = "https://github.com/hjosugi/hjosugi-hub"
readme = "README.md"

[[bin]]
name = "kofun-convert"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
